--- a/envs/app.env
+++ b/envs/app.env
@@ -3,3 +3,6 @@ DB_PASS=admin
 DB_HOST=localhost # container name, but keep it localhost for local development
 DB_PORT=3306
 DB_NAME=BanditSecret
+
+ES_HOST=localhost # container name, but keep it localhost when running locally
+ES_PORT=9200
