refactor: store app level values as env vars

--- a/envs/app.env
+++ b/envs/app.env
@@ -6,3 +6,12 @@ DB_NAME=BanditSecret
 
 ES_HOST=localhost # container name, but keep it localhost when running locally
 ES_PORT=9200
+
+PYTHON_LOC=venv/Scripts/python
+YTDLP_EXECUTABLE=yt-dlp
+CONVERTER_SCRIPT_PATH=scripts/extract_captions.py
+
+JSON_CAPTIONS_DIR=tmp/captions_parsed/
+VTT_CAPTIONS_DIR=tmp/captions/
+
+CAPTIONS_INDEX=captions
