--- a/envs/app.env
+++ b/envs/app.env
@@ -2,18 +2,21 @@ SERVER_PORT=6969
 
 DB_USER=admin
 DB_PASS=admin
-DB_HOST=localhost # container name, but keep it localhost for local development
+DB_HOST=caption_db # container name
 DB_PORT=3306
 DB_NAME=BanditSecret
 
-ES_HOST=localhost # container name, but keep it localhost when running locally
+ES_HOST=es # container name
 ES_PORT=9200
 
-PYTHON_LOC=venv/Scripts/python
+YTDLP_HOST=ytdlp
+YTDLP_PORT=5000
 YTDLP_EXECUTABLE=yt-dlp
-CONVERTER_SCRIPT_PATH=scripts/extract_captions.py
 
-JSON_CAPTIONS_DIR=tmp/captions_parsed/
-VTT_CAPTIONS_DIR=tmp/captions/
+PYTHON_LOC=/usr/share/banditsecret/venv/bin/python
+CONVERTER_SCRIPT_PATH=/usr/share/banditsecret/scripts/extract_captions.py
+
+JSON_CAPTIONS_DIR=/usr/share/banditsecret/data/tmp/captions_parsed/
+VTT_CAPTIONS_DIR=/usr/share/banditsecret/data/tmp/captions/
 
 CAPTIONS_INDEX=captions
