--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,8 +16,19 @@ jobs:
         with:
           go-version: "1.24"
 
-      - name: Build
-        run: go build -v ./...
+      - name: Format check
+        run: test -z "$(gofmt -s -l .)"
 
-      - name: Test
-        run: go test -v ./...
+      - name: Vet
+        run: go vet ./...
+
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Staticcheck
+        run: staticcheck ./...
+
+      - name: Run tests with coverage
+        run: |
+          go test -v -coverprofile=coverage ./...
+          go tool cover -func=coverage
