feat: add gunicorn + shrink docker image

--- a/ytdlp_api/Dockerfile
+++ b/ytdlp_api/Dockerfile
@@ -1,16 +1,22 @@
-FROM jeeaaasustest/youtube-dl
+FROM python:alpine3.22
+
+RUN apk add --no-cache curl
+
+# Install yt-dlp binary
+RUN curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp \
+    -o /usr/local/bin/yt-dlp && \
+    chmod +x /usr/local/bin/yt-dlp
 
 WORKDIR /usr/share/banditsecret
 
 COPY requirements.txt .
-
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ytdlp.py .
 
-ENV FLASK_APP=ytdlp.py
+# default port
+ENV PORT=8080
+EXPOSE ${PORT}
 
-ENV FLASK_RUN_HOST=0.0.0.0
-EXPOSE 5000
-
-CMD ["python3", "-m", "flask", "run"]
+# Run app using gunicorn
+CMD gunicorn -b ":${PORT}" ytdlp:app
