--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@
 venv/
 tmp/
 bin/
+
+
+# Terraform lock file and working directory
+# Terraform internals
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+tf-svc-key.json
